style: fixing text spacing on note panel

--- a/src/components/sidebar/note-panel/notePanel.module.css
+++ b/src/components/sidebar/note-panel/notePanel.module.css
@@ -7,23 +7,18 @@
   height: 100%;
   padding: 2em 1.5em;
   gap: 1.2em;
+  color: var(--text-white);
 }
 .editContainer {
   display: flex;
   flex-direction: column;
-  gap: 1em;
-}
-.inputsContainer {
-  /* Labels */
+  gap: 1.2em;
   & > :first-child {
-    display: block;
-    margin-bottom: 0.6em;
-    color: var(--text-white);
     font-weight: 600;
     font-size: 1.2rem;
   }
-
-  /* Inputs */
+}
+.inputsContainer {
   & > :last-child {
     box-sizing: border-box;
     padding: 0.8em;
@@ -43,6 +38,7 @@
   gap: 1em;
 }
 .colorProgressContainer {
+  font-size: 1rem;
   display: flex;
   flex-direction: column;
   gap: 1em;
